--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,9 +12,11 @@ http {
 
     keepalive_timeout  65;
 
+    resolver 127.0.0.11 ipv6=off;
+
     server {
         listen 8000 default_server;
-        root /var/www/html;
+        root /srv/assets/;
 
         index index.html index.html;
 
@@ -25,8 +27,10 @@ http {
         # access_log /tmp/nginx-access.log;
         # error_log /tmp/nginx-error.log;
 
+        set $api http://backend:8080;
+
         location / {
-            proxy_pass http://localhost:3000;
+            try_files $uri $uri/ /index.html;
         }
 
         location /api {
@@ -35,11 +39,11 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_ssl_server_name on;
             # proxy_set_header Host localhost;
-            proxy_pass http://localhost:8080;
+            proxy_pass $api;
         }
 
         location /assets/ {
-            root /srv;
+            alias /srv/assets/;
             gzip on;
         }
     }
